--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ cardano-message-signing = "1.0.1"
 hex = "0.4.3"
 chrono = { version = "0.4.30", features = ["serde"] }
 tokio = "1.32.0"
+sha2 = "0.10.7"
