initial pass at submission

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 DATABASE_URL=sqlite://db/pond.db
 KUPO_URL=http://0.0.0.0:1442
+OGMIOS_URL=http://0.0.0.0:1337
 CONTRACT_ADDRESS=addr1wynelppvx0hdjp2tnc78pnt28veznqjecf9h3wy4edqajxsg7hwsc
 RUST_LOG=info
 NETWORK=Mainnet
+DATUM_UPDATE_INTERVAL=5
+POOL_WALLET_PRIVATE_KEY=ed25519_sk1atqw6fxcf0yyyyyyyy66mpxxxxxxxxxxxxxxxxx
