remove a whole bunch of complexity

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ RUST_LOG=info
 NETWORK=Mainnet
 DATUM_UPDATE_INTERVAL=5
 POOL_WALLET_PRIVATE_KEY=ed25519_sk1atqw6fxcf0yyyyyyyy66mpxxxxxxxxxxxxxxxxx
+POOL_ID=42
