improve payment reliability and ability to recover from failed transactions

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@ OGMIOS_URL=http://0.0.0.0:1337
 CONTRACT_ADDRESS=addr1wynelppvx0hdjp2tnc78pnt28veznqjecf9h3wy4edqajxsg7hwsc # preview is addr_test1wpgzl0aa4lramtdfcv6m69zq0q09g3ws3wk6wlwzqv5xdfsdcf2qa
 RUST_LOG=info
 NETWORK=Mainnet
-DATUM_UPDATE_INTERVAL=20    # how often kupo is checked for a new block
-PAYOUT_UPDATE_INTERVAL=300  # how often hashrates are calculated into payouts
-POOL_WALLET_PRIVATE_KEY=ed25519_sk1atqw6fxcf0yyyyyyyy66mpxxxxxxxxxxxxxxxxx # generate this with tunapond-client
-POOL_ID=42  # how do we keep other pools from using your id
+DATUM_UPDATE_INTERVAL=5    # how often kupo is checked for a new block
+PAYOUT_UPDATE_INTERVAL=180  # how often hashrates are calculated into payouts
+MINING_WALLET_PRIVATE_KEY=ed25519_sk1atqw6fxcf0yyyyyyyy66mpxxxxxxxxxxxxxxxxx    # generate with tunapond client
+PAYMENT_WALLET_PRIVATE_KEY=ed25519_sk1atqw6fxcf0yyyyyyyy66mpxxxxxxxxxxxxxxxxx   # generate with tunapond client
+POOL_ID=42  # how do we keep other pools from using your id?
 POOL_FIXED_FEE=25000000 # 0.5%
