fix nonces, add options to configure host/port

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DATUM_UPDATE_INTERVAL=5    # how often kupo is checked for a new block
 MINING_WALLET_PRIVATE_KEY=ed25519_sk1atqw6fxcf0yyyyyyyy66mpxxxxxxxxxxxxxxxxx    # generate with tunapond client
 POOL_ID=42  # how do we keep other pools from using your id?
 POOL_FIXED_FEE=25000000 # 0.5%
+LISTEN_ADDRESS=0.0.0.0
+LISTEN_PORT=7959
