--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
-sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono" ] }
+sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
 dotenv = "0.15.0"
 log = "0.4.20"
 env_logger = "0.10.0"
@@ -21,3 +21,4 @@ tokio = "1.32.0"
 sha2 = "0.10.7"
 serde_json = "1.0.106"
 rand = "0.8.5"
+once_cell = "1.18.0"
