--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ POOL_ID=42   # this goes away after the hardfork
 POOL_FIXED_FEE=25000000 # 0.5%
 LISTEN_ADDRESS=0.0.0.0
 LISTEN_PORT=7959
+WHITELIST="50f40f12f81f2cf2615abc821dda29c5cb747e722042803a4cac3544,50f40f12f81f2cf2615abc821dda29c5cb747e722042803a4cac3544" # comma delimited whitelist, leave blank to allow all
 
 # These values are provided for you when registering a pool with tunapond-client
 POOL_CONTRACT_ADDRESS=addr_test1wptg6k3p5r62tdzlw9ke9047h3gvlqt2jeh570qaqp07rggd47lj7
