take sampling difficulty as an env var

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ POOL_FIXED_FEE=25000000 # 0.5%
 LISTEN_ADDRESS=0.0.0.0
 LISTEN_PORT=7959
 WHITELIST="50f40f12f81f2cf2615abc821dda29c5cb747e722042803a4cac3544,50f40f12f81f2cf2615abc821dda29c5cb747e722042803a4cac3544" # comma delimited whitelist, leave blank to allow all
-
+SAMPLING_DIFFICULTY=9
 # These values are provided for you when registering a pool with tunapond-client
 POOL_CONTRACT_ADDRESS=addr_test1wptg6k3p5r62tdzlw9ke9047h3gvlqt2jeh570qaqp07rggd47lj7
 POOL_SCRIPT_HASH=568d5a21a0f4a5b45f716d92bebebc50cf816a966f4f3c1d005fe1a1
