fix payout logic, dont select hundreds of thousands of proofs into memory

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,3 +27,4 @@ services:
           -c checkpoint_completion_target=0.9
           -c wal_buffers=16MB
           -c default_statistics_target=100
+          -c timezone=UTC
